--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@flat/api-reference",
   "version": "2.9.0",
   "dependencies": {
+    "@redocly/cli": "1.0.0-beta.107",
     "bower": "^1.8.14",
     "connect": "^3.7.0",
     "cors": "^2.8.5",
@@ -9,14 +10,13 @@
     "gulp-connect": "^5.7.0",
     "gulp-util": "^3.0.7",
     "portfinder": "^1.0.32",
-    "shelljs": "^0.8.5",
-    "swagger-repo": "^1.5.1"
+    "shelljs": "^0.8.5"
   },
   "private": true,
   "scripts": {
     "build": "node ./scripts/build.js",
-    "swagger": "swagger-repo",
-    "test": "swagger-repo validate",
+    "openapi": "openapi",
+    "test": "openapi lint spec/swagger.yaml",
     "start": "gulp serve"
   }
 }
